--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "spotiflight",
   "private": true,
-  "version": "0.4.0",
+  "version": "0.5.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,7 +9,8 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "vitest",
-    "test:watch": "vitest --watch"
+    "test:watch": "vitest --watch",
+    "generate-data": "node scripts/generate_data.js"
   },
   "dependencies": {
     "react": "^18.3.1",
